# ChangeLog for virtual/ffmpeg
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/virtual/ffmpeg/ChangeLog,v 1.53 2014/02/23 19:45:47 maekke Exp $

  23 Feb 2014; Markus Meier <maekke@gentoo.org> ffmpeg-9.ebuild:
  arm stable, bug #499368

  27 Jan 2014; Jeroen Roovers <jer@gentoo.org> ffmpeg-9.ebuild:
  Stable for HPPA (bug #499368).

  11 Aug 2013; Alexis Ballier <aballier@gentoo.org> ffmpeg-0.10.3.ebuild,
  ffmpeg-9.ebuild:
  depend on slot 0 for ffmpeg

  24 Jun 2013; Alexis Ballier <aballier@gentoo.org> ffmpeg-9.ebuild:
  take ffmpeg dep down to 1.0 as it is unmasked

  14 Apr 2013; Luca Barbato <lu_zero@gentoo.org> ffmpeg-9.ebuild, metadata.xml:
  Expose opus support

*ffmpeg-9 (16 Jan 2013)

  16 Jan 2013; Tomáš Chvátal <scarabeus@gentoo.org> +ffmpeg-9.ebuild,
  -ffmpeg-0.10.2-r1.ebuild:
  Add new virtual for 1.1/9 series. Masked. Also it has switched dep order as
  will be announced upon unmasking.

  05 Dec 2012; Tomáš Chvátal <scarabeus@gentoo.org> ffmpeg-0.10.2-r1.ebuild,
  ffmpeg-0.10.3.ebuild:
  Raise libav dep and stabilise as it passes repoman.

  26 Nov 2012; Tomáš Chvátal <scarabeus@gentoo.org> metadata.xml:
  Update to global useflag.

  26 Jul 2012; Fabian Groffen <grobian@gentoo.org> ffmpeg-0.10.3.ebuild:
  Marked ~x64-macos

  12 Jul 2012; Fabian Groffen <grobian@gentoo.org> ffmpeg-0.10.3.ebuild:
  Marked ~x86-solaris

  02 Jul 2012; Rick Farina <zerochaos@gentoo.org> ffmpeg-0.10.3.ebuild:
  added speex and gsm use flags per bug #424327

  11 Jun 2012; Benda Xu <heroxbd@gentoo.org> ffmpeg-0.10.3.ebuild:
  keyword ~x86-linux

  06 Jun 2012;  <heroxbd@gentoo.org> ffmpeg-0.10.3.ebuild:
  keyword ~amd64-linux

  03 Jun 2012; Anthony G. Basile <blueness@gentoo.org> ffmpeg-0.10.3.ebuild:
  Keyword ~mips

  18 May 2012; Samuli Suominen <ssuominen@gentoo.org> ffmpeg-0.10.2-r1.ebuild,
  ffmpeg-0.10.3.ebuild:
  Revert libpostproc entirely from the virtual wrt