@@ -2,13 +2,26 @@
 Hash: SHA256
 
 EBUILD ffmpeg-0.10.3.ebuild 815 SHA256 9582756377f91175539daedfa9fcb67ff3bb6dc37c46c381ca82048eb3fa68f8 SHA512 2a90051549b383383aeceb3c508b37651e0efcbe24c786b8327daf7fa738c3c05562db14050e06f6eb1b90ff2cf4e6fad70b38700029ff00d6a16f0e17148b8b WHIRLPOOL e22ebbf97680891c7a0ac243f2e19df152951b786492bf3bb0a13a818dac2995e32e46a0cc58e235d7a3012b9738f91d2777b54585aafc44bc9fa16275cee193
+EBUILD ffmpeg-9-r1.ebuild 891 SHA256 fb76adf4d5133fb8a17b2caf2ab750458a2061f30d4553e8d502b8dd818122b6 SHA512 a0f968a11cf45200c002d87dfa69b6de456d223f34afb5993662ff56fce69b743e64666594a452e84d46fbff65b7d8c627f4bec609a673b0944fc454c125ee40 WHIRLPOOL b804f2e254009c4d5a63a3531151fac3956ef8fed17a188a8046ce98e16faa7d5f21715bd8a8cd57db410cead4d9c4101a14e3d21db28eec8bd2c5de4f4efe68
 EBUILD ffmpeg-9.ebuild 824 SHA256 ce04b2aafbda954393b97a81805a603a26949a44b19a246b1f2a416a60631062 SHA512 088605aa4d6ef542d5ddb29e57a01e50393cf1839b6ace62cfbe4adc54a055b55d9b08b7733bb013e750f8736bf18e5fe5d4ee946221127e3444aba424fe8488 WHIRLPOOL 2ec1189d28c66d0f8502f5ad1498ffd344c2a724c18d5fc479b96dbe6856e2a025fac526c8541a58452a5fa7cb46d93f61e778735e8440b93afcc05fe1c5e06d
-MISC ChangeLog 7712 SHA256 2e448ef3c233c78f95c494102a48aadd9a688b29869807b2543651b5fb22a8ec SHA512 f3918be5468be7593d3dbc1384df8506a7975cc317dccc1e1c94c412716d4414a232536fd5c9e0b9dc3a85689c24cc3fc3b57ff2aecdf55cbc68dd0241d8081f WHIRLPOOL b836372185a11e6268409be9d8bafa071ae992afb8ca910f6d7e6bf30411dfb42211a9149d9168766e498749157ea9208229a5f7808d0dcaddb5fa8e1eee07e2
+MISC ChangeLog 7839 SHA256 bc4709175b789d9e7886d01ae3105e1bd93bf7bb623ba019f3986bb57aa00eaf SHA512 6727bcfec66ee1377b2144985fc3169e440a0331c10552bb333cac5e1846ebc71d4c002b07ba26ee6716c6d80747a2c486b5ca86f2c0334d2520efc35f17ba63 WHIRLPOOL 02aab4a1e947e874afb09eaa1970e481e1cd304bb1e76e03622986237ac62c48051c1ea08c2f5f1a65fc3b51fd07e1d3bc3bf5d142ae549b7efdf333d26a9fc0
 MISC metadata.xml 408 SHA256 bab780ff9c1dce5df137e391874e3e44b9bbbf2bb22710d54d1117736ccc7d81 SHA512 55c2fdd8319a1a2027befae2028bfbd3d1a5693544a1a4ff95fb4e50345173b1358f23e5e002a3d4ea963fe78b0d121acbb96fb037aec5f079d9bc2b862b127d WHIRLPOOL 846be3ea7817396fa59b643b20ae830dc78584395a71aee29eaf1a1226ffbf7b6b52275e35ba5e549333f3694e583d8084b4664ed891fd99b8b192d2d9ae115d
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.22 (GNU/Linux)
+Version: GnuPG v2
 
-iEYEAREIAAYFAlMKUawACgkQkKaRLQcq0GLFEACfRyy0OkZFvD8C3mcG0zLtoNfq
-P2AAn10gAcjggDXG85vbSEXJG+HyY+L1
-=NiFd
+iQJ8BAEBCABmBQJTk4TqXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ2REJCMDdDQzRGMERBRDA2RUEwQUZFNDFC
+MDdBMUFFQUVGQjQ0NjRFAAoJELB6GurvtEZOczoP/3h7t3gHVOFa7cIIVn9gpU9y
+dNpaESWtTj1afMm6l1z4ktXHLPx4gwNj+8R6Ww78Rei2dk9MOfA68YYICHqaiXlR
+BwQPu28oyC+IfDGfyP5jNNRFcAR53yojzJDqK/OtpgFCiDN+RFa+0OtR8LkHNWrm
+/24hZ4hsVUzPccmwtMNXThXdLml5avFwohlk/YUM4y9+3AZFIOmmiBedCw1byE+l
+PCjpzw+MPVUk+BCg+fttr5p8388MQx1Ujfx2/PA+qeqZ05+LFDYGnfQFCdUbHPVR
+swtYlWjs47yEoZvSe2eY7la+aDi1Hc0QdZjmA6+MAVRf3JG6UuZ6A+SmwsuQNaIf
+QzNzqgrS1lo0NYrJ70GI495TUITHQ1L7f87EXTvFNegdbjRlF7qpEkh3DlL7bJNw
+v+AOgiUcHPgZCqtE1X+MkcR0qStqbe+dqUiA1B1j3dDDEB8lz2X3CGSkPURuts5z
+NFswnzgvQelb16KKgO7PNYLtZdlhxkwGT1DyVhe7GN2oNQe/PTzrzefGKlk0jcpA
+M8TwTUj/9ncryLWCYsYorIx39jkrvoPZYxFas8W3l6kcvrZ6GQRBiffKf3UDzdZW
+RNQyTyrurNiw2QbNF62NEVJeeRRxthjKf0GGWYcMpldvpuFMqwTt47wkwpdOIMGS
+nt+RwwkGhOBvLTkBRQfk
+=2RNg
 -----END PGP SIGNATURE-----
