@@ -1,6 +1,11 @@
 # ChangeLog for virtual/ffmpeg
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/virtual/ffmpeg/ChangeLog,v 1.53 2014/02/23 19:45:47 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/virtual/ffmpeg/ChangeLog,v 1.54 2014/06/07 21:32:25 mgorny Exp $
+
+*ffmpeg-9-r1 (07 Jun 2014)
+
+  07 Jun 2014; Michał Górny <mgorny@gentoo.org> +ffmpeg-9-r1.ebuild:
+  Enable multilib support.
 
   23 Feb 2014; Markus Meier <maekke@gentoo.org> ffmpeg-9.ebuild:
   arm stable, bug #499368
